[tool.poetry]
name = "stock-analysis-local-crew"
version = "0.1.0"
description = "Run crew-ai locally for free"
authors = ["Joao Moura, Brandon Hancock"]
packages = [{ include = "src", from = "." }]


[tool.poetry.dependencies]
python = "^3.10"
crewai = "*"
langchain = "*"
langchain_community = "*"
yahooquery = "*"
pydantic = "*"
python-dotenv = "*"
serpapi = "^0.1.5"
google-api-python-client = "^2.161.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"